added welsh l's back

--- a/transcriptions/for_training/cc_16r-35v/18v.md
+++ b/transcriptions/for_training/cc_16r-35v/18v.md
@@ -16,7 +16,7 @@ And to a dronke man þe weye is slider
 And certes in þis world so faren we  
 we seeken fast after felicite  
 But we gon wrong ful ofte trewely  
-Thus may we seyn all and namlich I  
+Thus may we seyn aỻ and namlich I  
 That wende and hadde a gret opynion̄  
 That if I might skapen fro p̉son̄  
 Than hadde I ben in joye and ꝑfyt hele  
@@ -30,11 +30,11 @@ Resouneþ of his yollyng and clamour
 The pure fettres of his schynes grete   
 were of his bittre salte teeres wete  
 Allas qd he arcita cosyn myn  
-Of all our strif god wot þe fruyt is þin  
+Of aỻ our strif god wot þe fruyt is þin  
 Thou walkest now in Thebes at þi large  
 And of my woo þou yernest litel charge  
 Thou maist syn þou hast wisdom and manhede  
-Assemble all þe folk of oure kinrede  
+Assemble aỻ þe folk of oure kinrede  
 And make a werre so scharp on þis Cite  
 That by som auenture or som tretee  
 Thou maist haue hir to lady and to wif  
