--- a/transcriptions/for_training/cc_16r-35v/19r.md
+++ b/transcriptions/for_training/cc_16r-35v/19r.md
@@ -30,7 +30,7 @@ That gilteles tormenteþ Innocence
 And encreseth þis is al my penaūce  
 That man is bounden to his obẜuaūce  
 ffor goddes sake to letten of his wille  
-Ther as a beeste may all his lust fulfill  
+Ther as a beeste may aỻ his lust fulfiỻ  
 And whan a beeste is ded he haþ no peyne  
 But after his deth þe man mot weepe ⁊ pleyne  
 Though in þis world he haue care and wo  
