--- a/transcriptions/for_training/cc_16r-35v/22r.md
+++ b/transcriptions/for_training/cc_16r-35v/22r.md
@@ -7,7 +7,7 @@ author: "G. E. Saretto"
 - [x] Transcribed
 - [X] Double checked
 
-May with all þi floures whit and grene  
+May with aỻ þi floures whit and grene  
 welcome be þou faire freisshe may  
 I hope þat I som grene gete may  
 And from his courser with a lusty herte  
