--- a/transcriptions/for_training/cc_16r-35v/22v.md
+++ b/transcriptions/for_training/cc_16r-35v/22v.md
@@ -12,8 +12,8 @@ Of Cadmus which þat was þe ferste man
 That Thebes bult or ferst þe toun bigan  
 And of þe cite first was crouned king  
 Of his lynage am I and his ospring  
-By verray ligne as of þe stok roiall  
-And now I am so caytif and so þrall  
+By verray ligne as of þe stok roiaỻ  
+And now I am so caytif and so þraỻ  
 That he þat is my mortel enemy  
 I serue him as his squier pouerly  
 And ȝit doþ me Iuno wel more schame  
@@ -30,7 +30,7 @@ y stiked þurgh my trewe carful herte
 That schapen was my deþ arst þan my scherte  
 ye sleen me with ȝour eyȝen emelye  
 ȝe ben þe cause wher fore þat I dye  
-Of all þe remanant of myn oþer care  
+Of aỻ þe remanant of myn oþer care  
 Ne sette I nought þe montance of a tare  
 So þat I cowde don aught to ȝoure plesance  
 And with þat word he fel doun in a traunce  
