--- a/transcriptions/for_training/cc_16r-35v/24r.md
+++ b/transcriptions/for_training/cc_16r-35v/24r.md
@@ -33,7 +33,7 @@ That in his bedde þer daweþ him no day
 That he nys cladde and redy for to ride  
 wiþ hunte and horn and houndes hym besyde  
 ffor in his huntyng haþ he such delit  
-That it is all his ioye and appetyt  
+That it is aỻ his ioye and appetyt  
 To ben himself þe grete hertes bane  
 ffor after mars he serueþ now Diane  
 Cler was þe day as I haue told er þis  
