--- a/transcriptions/for_training/cc_16r-35v/24v.md
+++ b/transcriptions/for_training/cc_16r-35v/24v.md
@@ -29,7 +29,7 @@ That smyteþ eny strok þat I may seen
 But telleþ me what myster men ȝe ben  
 That ben so hardy for to fighten heere  
 wiþoute Iuge or oþer officere  
-As it were in a litell liste really  
+As it were in a liteỻ liste really  
 ¶ This Palamon answerde hastily  
 And seide sire what needeþ wordes mo  
 we haue þe deþ deserued boþe tuo  
