--- a/transcriptions/for_training/cc_16r-35v/25r.md
+++ b/transcriptions/for_training/cc_16r-35v/25r.md
@@ -31,15 +31,15 @@ It needeþ nought to pyne ȝou with þe corde
 ye schal be ded by mighty mars þe reede  
 The queen anon for verrey wōmanhede  
 Com for to wepe and so dide Emelye  
-And all þe ladies of þe compaignye  
-Gret pite was it as it þought hem all  
+And aỻ þe ladies of þe compaignye  
+Gret pite was it as it þought hem aỻ   
 That euer such a chaunce schulde falle  
 ffor gentil men þei were of gret estat  
 And noþing but for loue was þis debat  
 And saugh hire bloody woundes wide and sore  
-And all cryeden boþe lasse and more  
-haue mercy lord vpon vs wōmen all  
-And on here bare knees doun þei fall  
+And aỻ cryeden boþe lasse and more  
+haue mercy lord vpon vs wōmen aỻ  
+And on here bare knees doun þei faỻ   
 And wolde haue kist his feet þer as he stood  
 Til atte laste aslaked was his mood  
 ffor pite renneþ sone in gentil herte  
