--- a/transcriptions/for_training/cc_16r-35v/26r.md
+++ b/transcriptions/for_training/cc_16r-35v/26r.md
@@ -14,11 +14,11 @@ See how þai bleede be þai not wel arrayed
 Thus haþ hire lord þe god of loue y paiȝed  
 hire wages and hire fees for hire seruise  
 And ȝit þei wenen for to ben ful wise  
-That seruen loue for aught þat may bifall  
-But þis is ȝet þe beste game of all  
+That seruen loue for aught þat may bifaỻ    
+But þis is ȝet þe beste game of aỻ    
 That sche for wham þei haue þis iolyte  
 Can hem þerfore as moche þank as me  
-Sche woot na more of all þis hoote fare  
+Sche woot na more of aỻ þis hoote fare  
 By god þan woot a Cockow of an hare  
 But al moot ben assayed hoot and colde  
 A man moot ben a fool or ȝong or olde  
@@ -33,12 +33,12 @@ And eek of Emelye my soster deere
 And ȝe schal boþe anon vnto me swere  
 That neuere ȝe schal my coroune dere  
 Ne make werre vpon me night ne day  
-But ben my frendes in all þat ȝe may  
+But ben my frendes in aỻ þat ȝe may  
 I ȝou forȝiue þis trespas eu̔y del  
 And þey him sworen his axing fair and wel  
 And him of lordschipe and of mercy preide  
 And he hem g̃unteþ grace and þus he seide  
-To speke of riall lynage and richesse  
+To speke of riaỻ lynage and richesse  
 þough þat sche were a queen or a princesse  
 Ech of ȝou boþe is worþy douteles  
 To wedde whan tyme is but naþeles  
