--- a/transcriptions/for_training/cc_16r-35v/27r.md
+++ b/transcriptions/for_training/cc_16r-35v/27r.md
@@ -13,7 +13,7 @@ who couþe telle or who couþe it endite
 The ioye þat is maked in þe place  
 whan Theseus haþ don so fair a grace  
 But doun on knees went euery maner wight  
-And þonked him wiþ all here hert and might  
+And þonked him wiþ aỻ here hert and might  
 And namely þe Tebanes ofte siþe  
 And þus wiþ good hope and wiþ herte bliþe  
 They take þeir leue and homward gon þei ride  
