--- a/transcriptions/for_training/cc_16r-35v/27v.md
+++ b/transcriptions/for_training/cc_16r-35v/27v.md
@@ -32,7 +32,7 @@ Dispense bysynesse and Ialousie
 That werede of yalow of gooldes a garlond  
 And a cukkow sittyng on his hond  
 ffestes instrumentz karoles daunces  
-lust and array and all þe circumstances  
+lust and array and aỻ þe circumstances  
 Of loue which þat rekned and rekene schal  
 By ordre were peynted on þe wal  
 And mo þan I can make of mencion̄  
