--- a/transcriptions/for_training/cc_16r-35v/28r.md
+++ b/transcriptions/for_training/cc_16r-35v/28r.md
@@ -16,7 +16,7 @@ Thus may ȝe seen þat wisdom ne richesse
 Beaute ne sleighte strengþe ne hardynesse  
 Ne may wiþ venus holde chamꝑtye  
 ffor as hire list þe world þanne may sche gye  
-lo all þise folk so kaught were in here lace  
+lo aỻ þise folk so kaught were in here lace  
 Til þei for woo ful ofte seyde allase  
 Suffiseth here ensamples oon or tuo  
 And þough I couþe rekne a þousand mo  
