--- a/transcriptions/for_training/cc_16r-35v/28v.md
+++ b/transcriptions/for_training/cc_16r-35v/28v.md
@@ -9,16 +9,16 @@ author: Jenna Schoen
 Of Stubbes scharpe and hidous to biholde  
 In which þer ran a Rombel in a swough  
 And þought a storm schulde bresten euery bough  
-And dounward from an hull vnder a bente  
+And dounward from an huỻ vnder a bente  
 Ther stood þe temple of mars armypotente  
-wrought all of burned steel of which þentre  
+wrought aỻ of burned steel of which þentre  
 was long and streyt and gastly for to see  
 And þer out cam a rage and such a vese  
-That it made all þe gates for to rese  
+That it made aỻ þe gates for to rese  
 The northerne light in atte dores schone  
-ffor wyndowe on þe wall ne was þer none  
+ffor wyndowe on þe waỻ ne was þer none  
 Thorugh which men mighte eny light discerne  
-The dores waren all of Atthemant et̔ne  
+The dores waren aỻ of Atthemant et̔ne  
 ychenchede ouertwart and endlong  
 wiþ Iren towgh and for to make it strong  
 Eu̔y piler þe temple to sustene  
@@ -30,7 +30,7 @@ The pykpurs and eek þe pale drede
 The smyler with þe knyf vnder þe cloke  
 The schepene brennyng with þe blake smoke  
 The tresoun of þe morthering in þe bedde  
-The open werre wiþ woundes all bibledde  
+The open werre wiþ woundes aỻ bibledde  
 Contek wiþ bloody knyf and scharp manace  
 Al ful of schrikyng was þat sory place  
 The sleer of himself yet saugh I þere  
