--- a/transcriptions/for_training/cc_16r-35v/29r.md
+++ b/transcriptions/for_training/cc_16r-35v/29r.md
@@ -33,7 +33,7 @@ So was it schewed in þat purtreiture
 As is depeynted in þe sertres aboue  
 who schal be slain or elles deed for loue  
 Sufficeþ oon ensample in stories olde  
-I may not rekne hem all þough I wolde  
+I may not rekne hem aỻ þough I wolde  
 The statue of mars vpon a carte stood  
 Armed and loked grym as he were wood  
 And ouer his heed þer schineþ tuo figures  
@@ -42,4 +42,4 @@ That oon Puella þat oþer Rubeus
 This god of armes was arrayed þus  
 A wolf þer stood biforn him at his feete  
 wiþ eighen reede and of a man he eete  
-wiþ subtill pensell was depeynted þis storie  
+wiþ subtiỻ penseỻ was depeynted þis storie  
