--- a/transcriptions/for_training/cc_16r-35v/29v.md
+++ b/transcriptions/for_training/cc_16r-35v/29v.md
@@ -9,7 +9,7 @@ author: Jenna Schoen
 In redoutyng of mars and of his glorie  
 Now to þe temple of Diane þe chaste  
 As schortly as I can I wol me haste  
-To telle ȝou all þe discripcion̄  
+To telle ȝou aỻ þe discripcion̄  
 Depeynted ben þe walles vp and don̄  
 Of huntyng and of schamefast chastite  
 Ther saugh I how woful Calistope  
@@ -32,7 +32,7 @@ ffor which Diane wrought him care and wo
 Ther saugh I many anoþer wonder storie  
 The which me list nat drawe to memorie  
 ¶ This goddess on an hert ful wel hiegh seet  
-wiþ smale honndes all aboute hir feet  
+wiþ smale honndes aỻ aboute hir feet  
 And vnder neþe hire feet sche hadde a moone  
 wexynge it was and schulde wanye soone  
 In gaude greene hir statue cloþed was  
