--- a/transcriptions/for_training/cc_16r-35v/30r.md
+++ b/transcriptions/for_training/cc_16r-35v/30r.md
@@ -7,7 +7,7 @@ author: G. E. Saretto
 - [x] Transcribed
 - [x] Double checked
 
-And seyde helpe for þou mayst best of all  
+And seyde helpe for þou mayst best of aỻ    
 wel couþe he peynte lifly þat it wrought  
 wiþ many a floreyne he þe hewes bought  
 Now ben þise listes maad an Theseus  
@@ -21,7 +21,7 @@ That eueriche scholde an hundred knightes bringe
 The bataille to darrayne as I ȝou tolde  
 And til athenes hire couenant for to holde  
 haþ eu̔ych of hem brought an .C. knightes  
-wel armed for þe werre at all rightes  
+wel armed for þe werre at aỻ rightes  
 And sikerly þer trowed many a man  
 That neuer siþþen þat þe world bigan  
 That for to speke of knighthode of here hond  
