--- a/transcriptions/for_training/cc_16r-35v/31r.md
+++ b/transcriptions/for_training/cc_16r-35v/31r.md
@@ -29,14 +29,14 @@ A garland freissche and lusty for to seene
 vpon his hand he bar for his deduyt  
 An Egle tame as eny lilie whit  
 And C. lordes hadde he with him þere  
-All armed saue here heedes in al here gere  
+Aỻ armed saue here heedes in al here gere  
 fful richely in all maner þinges  
 ffor trusteþ wel þat Dukes Erles kynges  
 were gadred in þis noble companye  
 ffor loue and for encrees of chiualrie  
 aboute þis king þer ran on eu̔y part  
 fful many a tame leon̄ and lepart  
-And in þis wise þise lordes all and some  
+And in þis wise þise lordes aỻ and some  
 Ben on þe soneday to þe Cite come  
 Aboute p̉me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
