--- a/transcriptions/for_training/cc_16r-35v/31v.md
+++ b/transcriptions/for_training/cc_16r-35v/31v.md
@@ -6,7 +6,7 @@ author: Jenna Schoen
 - [X] Transcribed
 - [x] Double checked
 
-To eesen hem and don hem all honour  
+To eesen hem and don hem aỻ honour  
 That yet men weneþ þat no mannes wit  
 Of non estat ne couþe amenden it  
 The menstralcye þe ẜiuse atte feste  
@@ -18,7 +18,7 @@ Or which of hem can best daunsen or synge
 Ne who most felynglik spekeþ of loue  
 what haukes sitten on þe ꝑche aboue  
 what houndes liggen on þe flor adoun   
-Of all þis make I now no mencion̄  
+Of aỻ þis make I now no mencion̄  
 But alle þeffecte þat þinkeþ me þe beste  
 Now comeþ þe poynt and herkneþ if ȝou lest  
 ¶ The sonday night ar day bigan to springe  
