--- a/transcriptions/for_training/cc_16r-35v/32r.md
+++ b/transcriptions/for_training/cc_16r-35v/32r.md
@@ -40,6 +40,6 @@ This is þeffect and ende of my preyere
 yif me my loue þou blisful lady deere  
 whan þe orison̄ was don of Palamon  
 his sacrifise he dide and þat anon  
-fful pitously wiþ all circumstances  
+fful pitously wiþ aỻ circumstances  
 All telle I not as now his obẜuances  
 But atte laste þe Statue of Venus schook  
