--- a/transcriptions/for_training/cc_16r-35v/32v.md
+++ b/transcriptions/for_training/cc_16r-35v/32v.md
@@ -17,9 +17,9 @@ vp roos þe soune and vp roos Emelye
 And to þe temple of Diane gan hye  
 hir maydenes þat þider with hir ladde  
 fful redily with hem þe fyr þey hadde  
-Thencens þe cloþes and þe remenant all  
-That to þe sacrifice longen schall  
-The hornes full of methe as was þe gise  
+Thencens þe cloþes and þe remenant aỻ    
+That to þe sacrifice longen schaỻ    
+The hornes fuỻ of methe as was þe gise  
 Ther lacked nat to do hir sacrifise  
 Smokyng þe temple ful of cloþes fair̉  
 This Emelye with herte debonaire  
