--- a/transcriptions/for_training/cc_16r-35v/33r.md
+++ b/transcriptions/for_training/cc_16r-35v/33r.md
@@ -10,7 +10,7 @@ author: G. E. Saretto
 As keepe me fro þi vengance and þin Ire  
 That attheon aboughte cruelly  
 Chaste goddesse wel wost þou þat I  
-Desyre to ben a mayde all my lif  
+Desyre to ben a mayde aỻ my lif  
 Ne neuer wol I be no loue ne wijf  
 I am þou wost ȝit of þy compaignie  
 A maiden and loue huntyng and venerie  
@@ -24,8 +24,8 @@ And eek arcite þat loueþ me so sore
 This grace I preye ȝow wiþoute more  
 And sende loue and pees bitwixe hem tuo  
 And fro me torne awey here hertes so  
-That all here hoote loue and here desire  
-And all here besy torment and here fire  
+That aỻ here hoote loue and here desire  
+And aỻ here besy torment and here fire  
 Be queynt or torned in anoþer place  
 And if so be þou wolt not do me g̃ce  
 Or if my destyne be schape so  
@@ -33,7 +33,7 @@ That I schal needes haue oon of hem tuo
 As sende me him that most desireth me  
 Biholde goddesse of clene chastite  
 The bittre teeres þat on my cheekes falle  
-Syn þou art maiden and keꝑe of vs all  
+Syn þou art maiden and keꝑe of vs aỻ    
 My maydenhode þou kepe and wel conserue  
 And whil I lyue a maide I wol ȝou serue  
 ¶ The fires brennen vpo þe auter cleer  
