--- a/transcriptions/for_training/cc_16r-35v/33v.md
+++ b/transcriptions/for_training/cc_16r-35v/33v.md
@@ -38,7 +38,7 @@ This is þeffecte þer nys namore to seye
 The nexte hour of mars folwynge þis  
 Arcite vnto te temple walked is  
 Of fiers mars to don his sacrifise  
-wiþ all þe rites of his payen wise  
+wiþ aỻ þe rites of his payen wise  
 wiþ pitous hert and heigh deuocion̄  
 Right þus to mars he seide his orison̄  
 O stronge god þat in þe regnes colde  
