--- a/transcriptions/for_training/cc_16r-35v/34r.md
+++ b/transcriptions/for_training/cc_16r-35v/34r.md
@@ -29,7 +29,7 @@ haue rouþe as wel vpon my peynes smerte
 I am yong and vnconnyng as þou wost  
 And as I trowe with loue offended moost  
 That euer was ony lyues creature  
-ffor sche þat doth me all þis woo endure  
+ffor sche þat doth me aỻ þis woo endure  
 Ne reccheþ neuer wher I synke or fleete  
 And wel I woot ar sche me mercy heete  
 I moot wiþ strengþe wynne hire in þe place  
