--- a/transcriptions/for_training/cc_16r-35v/34v.md
+++ b/transcriptions/for_training/cc_16r-35v/34v.md
@@ -7,7 +7,7 @@ author: Jenna Schoen
 - [x] Double checked
 
 And in þi temple I wil my baner honge  
-And all þe armes of my companye  
+And aỻ þe armes of my companye  
 And eu̔emo vnto til þat day I dye  
 Eterne fire I wol byfore þe fynde  
 And eek to þis avow I wil me bynde  
