--- a/transcriptions/for_training/cc_16r-35v/35r.md
+++ b/transcriptions/for_training/cc_16r-35v/35r.md
@@ -13,7 +13,7 @@ In eelde is boþe wisdom and vsage
 Men may þe olde at renne and nought a trede  
 Saturne anoon to stynte strif and drede  
 Al be it þat it is agayn his kinde  
-Of all þis strif he gan remedye fynde  
+Of aỻ þis strif he gan remedye fynde  
 My deere doughter Venus qd Saturne  
 My cours þat haþ so wide for to turne  
 haþ more power þan wot any man  
@@ -36,7 +36,7 @@ That Palamon þat is þin owne knight
 Schal haue his lady as þou him bihight  
 Though mars schal helpe his knight ȝet naþeles  
 Betwixe ȝow þer moot be som tyme pees  
-All be ȝe nought boþe of oo complexion̄  
+Aỻ be ȝe nought boþe of oo complexion̄  
 That causeþ alday swich diuision̄  
 I am þin ayell redy at þi wille  
 weepe now namore I wil þi lust fulfille  
