changed e and p abbreviations

--- a/transcriptions/for_testing/b_15_17/119v.md
+++ b/transcriptions/for_testing/b_15_17/119v.md
@@ -13,7 +13,7 @@ That ydelnesse encombre hym noȝt. enuye ne pride
 Diuisiones graciaɏ sunt ⁊c̉  
 ¶Some he yaf wit. with wordes to shewe  
 wit to wynne hir liflode wiþ. as þe world askeþ  
-As p̔chours and preestes. and prentices of lawe  
+As p̉chours and preestes. and prentices of lawe  
 They lelly to lyue. by labour of tonge  
 And by wit to wissen oþere. as g̃ce hem wolde teche  
 ¶And some he kennede craft. and konnynge of sighte  
