--- a/transcriptions/for_testing/b_15_17/120v.md
+++ b/transcriptions/for_testing/b_15_17/120v.md
@@ -33,5 +33,5 @@ The kyng if he falle. in gilt or in trespas
 ffor counteþ he no kynges wraþe. whan he in Court sitteþ  
 To demen as a domes man. adrad was he neu̔e  
 Neiþ̔ of duc ne of deeþ. þ̔ he ne dide lawe  
-ffor p̔sent or for preiere. or any Prynces lettres  
+ffor p̉sent or for preiere. or any Prynces lettres  
 He dide equyte to alle. euene forþ his power  
