--- a/transcriptions/for_testing/b_15_17/123v.md
+++ b/transcriptions/for_testing/b_15_17/123v.md
@@ -35,6 +35,6 @@ Ne craue of my comune. but as my kynde askeþ
 ¶In condicion quod Conscience. þͭ þow konne defende  
 And rule þi reaume in reson. right wel and in truþe  
 Take þow mayst in reson. as þi lawe askeþ  
-Oīa tua sūt ad defendend. set non ad dep̔hendendum  
+Oīa tua sūt ad defendend. set non ad dep̉hendendum  
 The Viker hadde fer hoom. and faire took his leeue  
 And I awakned þer wiþ. and wroot as me mette  
