--- a/transcriptions/for_testing/cc_198/160v.md
+++ b/transcriptions/for_testing/cc_198/160v.md
@@ -21,7 +21,7 @@ And speken I wole of dorygen his wijf
 And for his absens wepeþ sche and sikeþ  
 As don þese noble wyues when hem likeþ  
 Sche mourneþ wakeþ wayleþ fasteþ ⁊ pleyneþ  
-Desire of his p̔sence hire so destreyneþ  
+Desire of his p̉sence hire so destreyneþ  
 That all þis wyde world sche sette at nouȝt  
 hire freendes which þat knewe hire heuy þouȝt  
 Conforted hire in al þat euer þey mighte or may
