--- a/transcriptions/for_testing/cp_201/83r.md
+++ b/transcriptions/for_testing/cp_201/83r.md
@@ -4,11 +4,11 @@ date: September 2018
 author: Jenna Schoen
 ---
 
-⁊ p̔esented hȳ wͭ pite / a peerynge be Mirre.  
+⁊ p̉esented hȳ wͭ pite / a peerynge be Mirre.  
 ffor M̔re is m̔cy to meene / ⁊ myȝlde speche of tūge.  
 Erthely onest þyng / was offred þus. a toones  
 þorghȝ þre kenne kyngys / knelyng to Ihū    
-ffor þese p̔cious p̔sentis / our̉ lord p̉nce Ihūs.  
+ffor þese p̉cious p̉sentis / our̉ lord p͛nce Ihūs.  
 was neyþ̔ kyng ne cōquerour / tyl he gan to wexe.  
 In þe man̔e of a man / ⁊ þͭ þorghȝ myche sleyghte.  
 As it be comeþ a cōquerour / to knowe manye sleyghtes.  
@@ -36,7 +36,7 @@ A fantekyn ful of wit / filius Marie.
 þͭ he þorghȝ grace was begete / ⁊ of no goome eỻ.  
 he wroghte þͭ / be no wit / but þorghȝ woord oone.  
 Aft̉ þe kende þͭ he cō of / þer̉ cōsed he Dowel.  
-⁊ whan he was waxe moor̉ / in his moodir p̔sense.  
+⁊ whan he was waxe moor̉ / in his moodir p̉sense.  
 he made lame to leepe / ⁊ he ȝaf lyȝht to blynde.  
 ⁊ he fedɖ wͭ tweȳ fyschis / ⁊ wͭ fyVe loVes.  
 ffolk soor̉ an hūg͛d / moor̉ þan fyVe þowsanɖ  
