--- a/transcriptions/for_testing/cp_201/83v.md
+++ b/transcriptions/for_testing/cp_201/83v.md
@@ -25,7 +25,7 @@ ffor no freend sholde it fecche / for ꝓphetis befor̉n tolde.
 ⁊ goon in to Galile / ⁊ gladien hise apostlys.  
 ⁊ his modir Marie / þus mē by forehond demede.  
 ¶þan þe knyghtis þͭ keptȳ it / be knewen hē selue.  
-þͭ angꝉis ⁊ Archangꝉis / er þe day gan sp̉inge.  
+þͭ angꝉis ⁊ Archangꝉis / er þe day gan sp͛inge.  
 Comen knelynge to þͭ corps / ⁊ konyngly sunge.  
 Xpt̄ resurgēs a mortuis / ⁊ a noon he roos after̉.  
 Verry man by for̉ hem aỻ / ⁊ forþ be for̉ hē wente.  
