--- a/transcriptions/for_testing/harley_7334/004v.md
+++ b/transcriptions/for_testing/harley_7334/004v.md
@@ -36,7 +36,7 @@ Ne was not worþy to hauen an office
 ffor him was leuer haue at his beddes heed  
 Twenty bookes cloþed in blak and reed  
 Of aristotil and of his philosophie  
-Thẻ Robus Riche or fithul or Sawtrie  
+Theʼ Robus Riche or fithul or Sawtrie  
 But al þough he were a philosophie  
 ȝet hadde he but litul gold in cofre  
 But al þat he might gete and his frendes sende  
