--- a/transcriptions/for_testing/harley_7334/058v.md
+++ b/transcriptions/for_testing/harley_7334/058v.md
@@ -44,4 +44,4 @@ hit is ful lasse harm to late him pace
 Than he schend al þe seruauntes in þe place  
 Therfore his mayster ȝaf him acqueyntaūce  
 And bad hī go wiþ sorwe and wiþ meschaūce  
-And þus þe ioly p̔ntys had his leue Now let hȳ ryot al þe night or leue  
+And þus þe ioly p̉ntys had his leue Now let hȳ ryot al þe night or leue  
