--- a/transcriptions/for_testing/r_3_2/140v.md
+++ b/transcriptions/for_testing/r_3_2/140v.md
@@ -88,7 +88,7 @@ which doþ mercy forth wiþ iustice
 Slayn is þe mordrere and þe mordrice  
 Thurgh verray trouthe and rightwisnesse  
 And þurgh mercy sauf is simplesse  
-Of hire whom mercy p̔serueþ  
+Of hire whom mercy p̉serueþ  
 Thus haþ he wel þat wel deserueþ  
 Whan al þis þing is don and ended  
 This king which loued was and frended  
@@ -194,7 +194,7 @@ which doþ mercy forth wiþ iustice
 Slayn is þe mordrere and þe mordrice  
 Thurgh verray trouthe and rightwisnesse  
 And þurgh mercy sauf is simplesse  
-Of hire whom mercy p̔serueþ  
+Of hire whom mercy p̉serueþ  
 Thus haþ he wel þat wel deserueþ  
 Whan al þis þing is don and ended  
 This king which loued was and frended  
