--- a/transcriptions/for_testing/r_3_2/141v.md
+++ b/transcriptions/for_testing/r_3_2/141v.md
@@ -29,7 +29,7 @@ ffor I behighte þe þat þifte
 fferst whan þou com vndir my schrifte  
 þat þough I toward Venus were  
 yit spak I suche wordes þere  
-þat for þe p̔stode which I haue  
+þat for þe p̉stode which I haue  
 myn ordre and myn astat to saue  
 I seid I wolde of myn office  
 To v̉tu more þan to vice  
