--- a/transcriptions/for_testing/r_3_2/142r.md
+++ b/transcriptions/for_testing/r_3_2/142r.md
@@ -16,14 +16,14 @@ and felte it as it is in soth
 he scholde do right as he doþ   
 Or elles worse in his degre  
 ffor wel I wot and so do ye  
-That loue haþ eue̔ yit ben vsed  
+That loue haþ euẻ yit ben vsed  
 So moot I nedes ben excused  
 But fader if ye wolde þus  
 vnto Cupide and to venus  
 Be frendlich vnto my querele   
 So þat mȳ herte were in hele   
 Of loue which is in my brest  
-I wot wel þanne a bettre p̔st    
+I wot wel þanne a bettre p̉st    
 was neu̔e mad to my behoue  
 But al þe while þat I houe  
 In non̄certein bituen þe tuo  
@@ -32,7 +32,7 @@ Schal torne. þat is al my drede
 So þat I not what is to red  
 But for final conclusion̄  
 I þenke a supplicacioun  
-wiþ pleyne wordes ⁊ exp̔sse  
+wiþ pleyne wordes ⁊ exp̉sse  
 write vnto Ven9 þe goddesse  
 þe which I prie yow to bere  
 And bringe ayein a good answere  
