--- a/transcriptions/for_testing/r_3_2/142v.md
+++ b/transcriptions/for_testing/r_3_2/142v.md
@@ -36,7 +36,7 @@ Began my loue. of which mȳ heuynesse.
 Is now and eu̔e schal but if I speede  
 So wot I nought myself what is to rede  
 For þi to yow Cupide and Ven9 boþe  
-wͭ al mȳ hertes obeissance I p̔ie    
+wͭ al mȳ hertes obeissance I p̉ie    
 If ye were atte ferste time wroþe  
 whan I began to loue as I yow seye   
 now stynte and do þis infortune aweie    
@@ -65,7 +65,7 @@ In such a wise as ye now wite
 haþ aftir mȳ entente write  
 vnto Cupide and to Venus  
 This prest which highte Genius  
-It tok on honde to p̔sente  
+It tok on honde to p̉sente  
 On my message and forþ he wente  
 To Venus for to wite hir wille  
 And I bood in þe place stille  
