--- a/transcriptions/for_training/cc_16r-35v/16r.md
+++ b/transcriptions/for_training/cc_16r-35v/16r.md
@@ -13,7 +13,7 @@ And seide Cosyn myn what eyleþ þe
 That art so pale and dedly on to se  
 why crydestow who haþ þe don offence  
 ffor goddes loue tak al in pacience  
-Oure p̉soun for it may non oþer be  
+Oure p͛soun for it may non oþer be  
 ffortune haþ yiue vs þis aduersite  
 Som wicke aspect or disposicion̄  
 Of Saturne by som constellacion̄  
@@ -23,7 +23,7 @@ we mote endure it þis is schort and playn
 This Palamon answerd and seide again  
 Cosyn for soþe of þis opynion̄  
 þou hast a vain Imaginacion̄  
-This p̉son̄ causede me nought to crie    
+This p͛son̄ causede me nought to crie    
 But I was hurt right now þorugh out myn yhe    
 In to myn hert þat wol my bane be  
 The fayrnesse of þat lady þat I see  
@@ -37,7 +37,7 @@ yow in þis gardeyn þus to tñsfigure
 Byfore me sorwful wrecched creature  
 Out of þis prison̄ help þat we mowe scape  
 And if so be my destenye be schape  
-By eterne world to deyen in p̉son̄  
+By eterne world to deyen in p͛son̄  
 Of oure lynage haue som compassion̄  
 That is so lowe y brought by tyrannie  
 And with þat word Arcite gan aspye  
