--- a/transcriptions/for_training/cc_16r-35v/17r.md
+++ b/transcriptions/for_training/cc_16r-35v/17r.md
@@ -20,7 +20,7 @@ ffor which I tolde þe myn auenture
 As to my cosyn and to my broþer sworn  
 I pose þat þou louedest hire biforn  
 wostow nought wel þe olde clerkes sawe  
-That who schal ȝiue a louer eny lawe  ¶Quis legẻ dat amantibꝫ  
+That who schal ȝiue a louer eny lawe  ¶Quis legeʼ dat amantibꝫ  
 loue is a gretter lawe by my pan  
 Than may be yeue to eny erthly man  
 And þerfore positif lawe and such decree  
