--- a/transcriptions/for_training/cc_16r-35v/18r.md
+++ b/transcriptions/for_training/cc_16r-35v/18r.md
@@ -21,10 +21,10 @@ wolde haue y suffised right ynough for me
 ¶ Oo deere Cosyn Palamon qd he  
 Thin is þe victorie of þis auenture  
 fful blissefully in prison̄ might þou dure  
-In p̉soun certes nay but paradys  
+In p͛soun certes nay but paradys  
 wel haþ fortune torned þe þe dys  
 That hast þe right of hire and I þabsence  
-ffor possible is syn þou hast hir p̔sence  
+ffor possible is syn þou hast hir p̉sence  
 And art a knight a worþi and an able  
 That by som caas syn fortune is changeable  
 Thou maist somtyme to þi desir atteyne  
