--- a/transcriptions/for_training/cc_16r-35v/18v.md
+++ b/transcriptions/for_training/cc_16r-35v/18v.md
@@ -18,7 +18,7 @@ we seeken fast after felicite
 But we gon wrong ful ofte trewely  
 Thus may we seyn aỻ and namlich I  
 That wende and hadde a gret opynion̄  
-That if I might skapen fro p̉son̄  
+That if I might skapen fro p͛son̄  
 Than hadde I ben in joye and ꝑfyt hele  
 Ther now I am exiled fro my wele  
 Syn þat I may not seen ȝou Emelye  
