--- a/transcriptions/for_training/cc_16r-35v/19r.md
+++ b/transcriptions/for_training/cc_16r-35v/19r.md
@@ -22,7 +22,7 @@ youre ꝑlement and ȝour eterne gũnt
 what is mankynde more vnto ȝou holde  
 Than is þe scheep þat roukeþ in þe folde  
 ffor slain is man right as anoþer beeste  
-And dwelleþ eek in p̉son̄ and in arreste  
+And dwelleþ eek in p͛son̄ and in arreste  
 And haþ siknesse and gret aduersite  
 And ofte tymes gilteles ꝑ de  
 ¶ what gouernance is in þis prescience  
@@ -40,5 +40,5 @@ But wel I wot þat in þis world gret pyne is
 Allas I see a ẜpent or a þeef  
 That many a trewe man haþ do meschief  
 Gon at his large and wher him list may turne  
-But I moot ben in p̉son̄ þurgh Saturne  
+But I moot ben in p͛son̄ þurgh Saturne  
 And eek þurgh Iuno Ialous and eek wood
