--- a/transcriptions/for_training/cc_16r-35v/21r.md
+++ b/transcriptions/for_training/cc_16r-35v/21r.md
@@ -19,7 +19,7 @@ And bar him so in pees and eek in werre
 Ther was no man þat Theseus haþ derre  
 And in þis blisse lete I now arcite  
 And speke I wol of Palamon alite  
-¶ In derknesse and horrible and strong p̉son̄  
+¶ In derknesse and horrible and strong p͛son̄  
 This seuene ȝeer haþ seten Palamon̄  
 fforpyned what for woo and for distresse  
 who feleth double sore and heuynesse  
