--- a/transcriptions/for_training/cc_16r-35v/23r.md
+++ b/transcriptions/for_training/cc_16r-35v/23r.md
@@ -17,7 +17,7 @@ Thou schalt not loue my lady Emelye
 But I wol loue hire oonly and nomo  
 ffor I am Palamon þi mortel foo  
 And þough þat I no wepene haue in þis place  
-But out of p̉soun am astert by grace  
+But out of p͛soun am astert by grace  
 I drede nought þat ouþer þou schalt die  
 Or þou ne schalt not louen Emelye  
 Chees which þou wilt or þou schalt not asterte  
