--- a/transcriptions/for_training/cc_16r-35v/25r.md
+++ b/transcriptions/for_training/cc_16r-35v/25r.md
@@ -16,10 +16,10 @@ And þis is he þat loueþ Emelye
 ffor siþ þat day is come þat I schal dye  
 I make pleynly my confession̄  
 That I am þilke woful Palamon  
-þat haþ þi p̉son̄ broke wikkedely  
+þat haþ þi p͛son̄ broke wikkedely  
 I am þi mortel foo ⁊ it am I  
 That loueþ so hote Emelya þe brighe  
-That I wol dye p̔sent in hir sighte  
+That I wol dye p̉sent in hir sighte  
 wher fore I axe deþ and my Iuwise  
 But sle my felawe in þe same wise  
 ffor boþe haue we deserued to be slayn  
