--- a/transcriptions/for_training/cc_16r-35v/25v.md
+++ b/transcriptions/for_training/cc_16r-35v/25v.md
@@ -13,7 +13,7 @@ And al þough þat his Ire hire gilt accused
 ȝit in his reson̄ he hem boþe excused  
 As þus he þoughte wel þat eu̔y man  
 wil helpe himself in loue if þat he can  
-And eek deliuere himself out of p̉son̄  
+And eek deliuere himself out of p͛son̄  
 And eek his herte hadde compassion̄  
 Of wommē for þey wepen euer in oon  
 And in his gentil herte he þought anon  
@@ -36,7 +36,7 @@ he may be cleped a god of his miracles
 ffor he can maken at his owne gise  
 Of euerich herte as þat him list deuise  
 lo her þis arcite and þis Palamon  
-That quytly were out of my p̉soun  
+That quytly were out of my p͛soun  
 And might haue lyued in Thebes rially  
 And witen I am here mortel enemy  
 And þat here deþ lith in my might also  
