--- a/transcriptions/for_training/cc_16r-35v/31r.md
+++ b/transcriptions/for_training/cc_16r-35v/31r.md
@@ -38,7 +38,7 @@ aboute þis king þer ran on eu̔y part
 fful many a tame leon̄ and lepart  
 And in þis wise þise lordes aỻ and some  
 Ben on þe soneday to þe Cite come  
-Aboute p̉me and in þe toun alighte  
+Aboute p͛me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
 whan he hadde brought hem in to his Cite  
 And Inned hem eu̔ich at his degre  
