--- a/transcriptions/for_training/cc_16r-35v/35r.md
+++ b/transcriptions/for_training/cc_16r-35v/35r.md
@@ -21,7 +21,7 @@ Myn is þe drynclyng in þe see so wan
 Myn is þe prison̄ in þe derke cote  
 Myn is þe strangle and hangyng by þe þrote  
 The murmure and þe cherles rebellinge  
-The gronyng and þe priue emp̉sonynge  
+The gronyng and þe priue emp͛sonynge  
 I do vengeance and plein correccion̄  
 wil I dwelle in þe signe of þe leon̄  
 Myn is þe ruine of þe hihe halles  
